Added ActiveStorage Authentication refactor GoogleID token validation (TODO: Apple & Fb) Account page refactor Added user avatar
