# server/db/migrate/20200515001222_create_customers.rb
@@ -2,7 +2,14 @@ class CreateCustomers < ActiveRecord::Migration[6.0]
   def change
     create_table :customers, id: :uuid do |t|
       t.string :email, null: false
-      t.string :phone_number
+      t.string :first_name, length: 40
+      t.string :last_name, length: 40
+      t.string :phone_number, length: 14
+
+      t.references :location_drop_off, foreign_key: true, type: :uuid
+
+      t.string :auth_provider, length: 40, null: false
+      t.string :auth_provider_uid
 
       ## Trackable
       t.integer :sign_in_count, default: 0, null: false
