# server/lib/core_modules/facebook/auth.rb
@@ -1,0 +1,7 @@
+module CoreModules
+  module Facebook
+    class Auth
+
+    end
+  end
+end
